// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task Detailspage tests should render full Detailspage 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  margin-left: -10px;
}

.c4>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4>* {
  margin-left: 10px;
}

.c6 {
  margin-left: -5px;
}

.c6>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6>* {
  margin-left: 5px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c16 {
  cursor: pointer;
}

.c17 svg path {
  fill: #bfbfbf;
}

.c8 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c8 * {
  height: inherit;
  width: inherit;
}

.c26 {
  height: 50px;
  width: 50px;
  line-height: 50px;
}

.c26 * {
  height: inherit;
  width: inherit;
}

.c21 {
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #e5e5e5;
  position: relative;
}

.c22 {
  margin: 0 0 1px 0;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c25 {
  margin-right: 5px;
}

.c27 {
  word-break: break-all;
  min-width: 100px;
}

.c35 {
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-top: 2px;
  border-left: 1px solid #f3f3f3;
  border-right: 1px solid #e5e5e5;
  cursor: pointer;
  background-color: #f3f3f3;
  border-bottom: 1px solid #f3f3f3;
  margin-bottom: -2px;
  border-top: 2px solid #11ab51;
}

.c35 :first-child {
  border-left: 1px solid #e5e5e5;
}

.c36 {
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-top: 2px;
  border-left: 1px solid #fff;
  border-right: 1px solid #e5e5e5;
  cursor: pointer;
  border-top: 2px solid #fff;
}

.c36 :hover {
  border-top: 2px solid #e5e5e5;
}

.c36 :first-child {
  border-left: 1px solid #fff;
}

.c33 {
  border-bottom: 2px solid #11ab51;
  margin-top: 30px;
  margin-bottom: 15px;
}

.c40 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
}

.c50 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c49>*:not(:last-child)::after {
  content: '•';
  margin-left: 5px;
}

.c41 td {
  padding: 4px 4px 4px 0;
}

.c41 tr td:first-child {
  padding-right: 5px;
}

.c30 {
  border-spacing: 0px;
  color: #7F7F7F;
  font-size: 10px;
}

.c30 :nth-child(even) {
  margin-left: 3px;
}

.c30 :nth-child(odd) {
  margin-left: 30px;
}

.c42 {
  width: 10%;
}

.c43 {
  width: 90%;
}

.c38 {
  font-size: 0.7em;
}

.c45 {
  height: 13px;
  box-sizing: content-box;
  display: inline-block;
  width: 100px;
  background: #4C4C4C;
  vertical-align: middle;
  text-align: center;
}

.c47 {
  z-index: 1;
  font-weight: bold;
  color: #fff;
  font-size: 9px;
  margin: 0;
  position: relative;
  top: -13px;
  padding-top: 1px;
}

.c46 {
  height: 13px;
  width: 100%;
  background: #4f91c7;
}

.c48 {
  white-space: nowrap;
}

.c44:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  position: relative;
  display: none;
}

.c10:hover .c12 {
  display: block;
}

.c13 {
  position: absolute;
  margin: 0;
  padding: 0;
  left: 0;
  top: 0;
  z-index: 100;
  list-style: none;
  font-size: 10px;
  width: 255px;
}

.c14 {
  height: 22px;
  width: 255px;
  border-left: 1px solid #7F7F7F;
  border-right: 1px solid #7F7F7F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #fff;
  font-weight: bold;
  text-indent: 12px;
  text-align: left;
}

.c14:first-child {
  border-top: 1px solid #7F7F7F;
}

.c14:last-child {
  border-bottom: 1px solid #7F7F7F;
}

.c14:hover {
  background: #11ab51;
  color: #fff;
}

.c14 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  cursor: pointer;
}

.c18 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  font-size: 10px;
  background-color: red;
  font-weight: bold;
  border-radius: 10px;
  min-width: 10px;
  padding: 3px 5px;
  z-index: 1;
  background-color: #11ab51;
  color: #fff;
  bottom: -8px;
  right: 0px;
}

@media print {
  .c7 {
    display: none;
  }
}

@media print {
  .c40 {
    border-collapse: collapse;
  }
}

@media print {
  .c50 {
    border-collapse: collapse;
  }
}

@media print {
  .c45 {
    background: none;
    border: 0;
  }
}

@media print {
  .c47 {
    color: black;
  }
}

@media print {
  .c46 {
    background: none;
  }
}

<div
  class="c0"
>
  <div
    class="c1 toolbar"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c2 c4"
        margin="10px"
      >
        <div
          class="c2 c3"
        >
          <div
            class="c5 c6"
            margin="5px"
          >
            <a
              href="test/en/scanning.html#managing-tasks"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c7 c8"
                data-testid="svg-icon"
                iconsize="small"
                title="Help: Tasks"
              >
                <svg
                  title="Help: Tasks"
                >
                  help.svg
                </svg>
              </span>
            </a>
            <a
              class="c9"
              href="/tasks"
            >
              <span
                class="c7 c8"
                data-testid="svg-icon"
                iconsize="small"
                title="Task List"
              >
                <svg
                  title="Task List"
                >
                  list.svg
                </svg>
              </span>
            </a>
            <span
              class="c7 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="This is an Alterable Task. Reports may not relate to current Scan Config or Target!"
            >
              <svg
                title="This is an Alterable Task. Reports may not relate to current Scan Config or Target!"
              >
                alterable.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c6"
            margin="5px"
          >
            <span
              class="c10 c11"
            >
              <span
                class="c7 c8"
                data-testid="svg-icon"
                iconsize="small"
              >
                <svg>
                  new.svg
                </svg>
              </span>
              <div
                class="c12"
              >
                <ul
                  class="c13"
                >
                  <li
                    class="c14"
                  >
                    <div
                      class="c15"
                    >
                      New Task
                    </div>
                  </li>
                  <li
                    class="c14"
                  >
                    <div
                      class="c15"
                    >
                      New Container Task
                    </div>
                  </li>
                </ul>
              </div>
            </span>
            <span
              class="c7 c16 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="Clone Task"
            >
              <svg
                title="Clone Task"
              >
                clone.svg
              </svg>
            </span>
            <span
              class="c7 c16 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="Edit Task"
            >
              <svg
                title="Edit Task"
              >
                edit.svg
              </svg>
            </span>
            <span
              class="c7 c16 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="Move Task to trashcan"
            >
              <svg
                title="Move Task to trashcan"
              >
                trashcan.svg
              </svg>
            </span>
            <span
              class="c7 c16 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="Export Task as XML"
            >
              <svg
                title="Export Task as XML"
              >
                export.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c6"
            margin="5px"
          >
            <span
              class="c7 c16 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="Start"
            >
              <svg
                title="Start"
              >
                start.svg
              </svg>
            </span>
            <span
              alt="Resume"
              class="c7 c17 c8"
              data-testid="svg-icon"
              iconsize="small"
              title="Task is not stopped"
            >
              <svg
                title="Task is not stopped"
              >
                resume.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c4"
            margin="10px"
          >
            <div
              class="c2 c3"
            >
              <div
                class="c2 c6"
                margin="5px"
              >
                <a
                  class="c9"
                  data-testid="details-link"
                  href="/report/1234"
                  title="Last Report for Task foo from 07/30/2019"
                >
                  <span
                    class="c7 c8"
                    data-testid="svg-icon"
                    iconsize="small"
                  >
                    <svg>
                      report.svg
                    </svg>
                  </span>
                </a>
                <a
                  class="c9"
                  href="/reports?filter=task_id%3D12345"
                  title="Total Reports for Task foo"
                >
                  <div
                    class="c18"
                    margin="0"
                  >
                    <span
                      class="c7 c8"
                      data-testid="svg-icon"
                      iconsize="small"
                    >
                      <svg>
                        report.svg
                      </svg>
                    </span>
                    <span
                      class="c19"
                      data-testid="badge-icon"
                      margin="0"
                    >
                      1
                    </span>
                  </div>
                </a>
              </div>
            </div>
            <a
              class="c9"
              href="/results?filter=task_id%3D12345"
              title="Results for Task foo"
            >
              <div
                class="c18"
                margin="0"
              >
                <span
                  class="c7 c8"
                  data-testid="svg-icon"
                  iconsize="small"
                >
                  <svg>
                    result.svg
                  </svg>
                </span>
                <span
                  class="c19"
                  data-testid="badge-icon"
                  margin="0"
                >
                  1
                </span>
              </div>
            </a>
            <div
              class="c2 c3"
            >
              <div
                class="c2 c6"
                margin="5px"
              >
                <a
                  class="c9"
                  href="/notes?filter=task_id%3D12345"
                  title="Notes for Task foo"
                >
                  <div
                    class="c18"
                    margin="0"
                  >
                    <span
                      class="c7 c8"
                      data-testid="svg-icon"
                      iconsize="small"
                    >
                      <svg>
                        note.svg
                      </svg>
                    </span>
                    <span
                      class="c19"
                      data-testid="badge-icon"
                      margin="0"
                    >
                      0
                    </span>
                  </div>
                </a>
                <a
                  class="c9"
                  href="/overrides?filter=task_id%3D12345"
                  title="Overrides for Task foo"
                >
                  <div
                    class="c18"
                    margin="0"
                  >
                    <span
                      class="c7 c8"
                      data-testid="svg-icon"
                      iconsize="small"
                    >
                      <svg>
                        override.svg
                      </svg>
                    </span>
                    <span
                      class="c19"
                      data-testid="badge-icon"
                      margin="0"
                    >
                      0
                    </span>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    class="entity-section"
  >
    <div
      class="c20 c21 section-header"
    >
      <h2
        class="c22 c23"
      >
        <div
          class="c24 c25"
        >
          <span
            class="c7 c26"
            data-testid="svg-icon"
          >
            <svg>
              task.svg
            </svg>
          </span>
        </div>
        <div
          class="c24 c27"
        >
          Task: foo
        </div>
      </h2>
      <div
        class="c28"
      >
        <div
          class="c29"
        >
          <div
            class="c2 c30"
          >
            <div>
              ID:
            </div>
            <div>
              12345
            </div>
            <div>
              Created:
            </div>
            <div>
              Tue, Jul 16, 2019 8:31 AM CEST
            </div>
            <div>
              Modified:
            </div>
            <div>
              Tue, Jul 16, 2019 8:44 AM CEST
            </div>
            <div>
              Owner:
            </div>
            <span>
              admin
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c31"
    >
      <div
        class="c32 c33"
      >
        <div
          class="c34"
        >
          <div
            class="c35"
          >
            Information
          </div>
          <div
            class="c36"
          >
            <div
              class="c37"
            >
              <span>
                User Tags
              </span>
              <span
                class="c38"
              >
                (
                <i>
                  0
                </i>
                )
              </span>
            </div>
          </div>
          <div
            class="c36"
          >
            <div
              class="c37"
            >
              <span>
                Permissions
              </span>
              <span
                class="c38"
              >
                (
                <i>
                  0
                </i>
                )
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c39"
      >
        <table
          class="c40 c41"
        >
          <colgroup>
            <col
              class="c42"
              width="10%"
            />
            <col
              class="c43"
              width="90%"
            />
          </colgroup>
          <tbody
            class=""
          >
            <tr>
              <td>
                <div
                  class="c39"
                >
                  Name
                </div>
              </td>
              <td>
                <div
                  class="c39"
                >
                  foo
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c39"
                >
                  Comment
                </div>
              </td>
              <td>
                <div
                  class="c39"
                >
                  bar
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c39"
                >
                  Alterable
                </div>
              </td>
              <td>
                <div
                  class="c39"
                >
                  Yes
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c39"
                >
                  Status
                </div>
              </td>
              <td>
                <div
                  class="c39"
                >
                  <a
                    class="c9 c44"
                    data-testid="details-link"
                    href="/report/1234"
                  >
                    <div
                      boxbackground="#4C4C4C"
                      class="c45"
                      data-testid="progressbar-box"
                      title="Done"
                    >
                      <div
                        background="low"
                        class="c46"
                        data-testid="progress"
                        progress="100"
                      />
                      <div
                        class="c47"
                      >
                        <span
                          class="c48"
                        >
                          Done
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          class="c31"
        >
          <div
            class="c39"
          >
            <h2>
              Target
            </h2>
            <div>
              <a
                class="c9"
                data-testid="details-link"
                href="/target/5678"
              >
                target1
              </a>
            </div>
          </div>
          <div
            class="c39"
          >
            <h2>
              Alerts
            </h2>
            <div>
              <div
                class="c2 c3"
              >
                <div
                  class="c2 c6 c49"
                  margin="5px"
                >
                  <span>
                    <a
                      class="c9"
                      data-testid="details-link"
                      href="/alert/91011"
                    >
                      alert1
                    </a>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c39"
          >
            <h2>
              Scanner
            </h2>
            <div>
              <table
                class="c50 c41"
              >
                <colgroup>
                  <col
                    class="c42"
                    width="10%"
                  />
                  <col
                    class="c43"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c39"
                      >
                        Name
                      </div>
                    </td>
                    <td>
                      <div
                        class="c39"
                      >
                        <span>
                          <a
                            class="c9"
                            data-testid="details-link"
                            href="/scanner/1516"
                          >
                            scanner1
                          </a>
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c39"
                      >
                        Type
                      </div>
                    </td>
                    <td>
                      <div
                        class="c39"
                      >
                        OpenVAS Scanner
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c39"
          >
            <h2>
              Assets
            </h2>
            <div>
              <table
                class="c50 c41"
              >
                <colgroup>
                  <col
                    class="c42"
                    width="10%"
                  />
                  <col
                    class="c43"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c39"
                      >
                        Add to Assets
                      </div>
                    </td>
                    <td>
                      <div
                        class="c39"
                      >
                        Yes
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c39"
                      >
                        Apply Overrides
                      </div>
                    </td>
                    <td>
                      <div
                        class="c39"
                      >
                        Yes
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c39"
                      >
                        Min QoD
                      </div>
                    </td>
                    <td>
                      <div
                        class="c39"
                      >
                        70 %
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c39"
          >
            <h2>
              Scan
            </h2>
            <div>
              <table
                class="c50 c41"
              >
                <colgroup>
                  <col
                    class="c42"
                    width="10%"
                  />
                  <col
                    class="c43"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c39"
                      >
                        Duration of last Scan
                      </div>
                    </td>
                    <td>
                      <div
                        class="c39"
                      >
                        2 minutes
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c39"
                      >
                        Auto delete Reports
                      </div>
                    </td>
                    <td>
                      <div
                        class="c39"
                      >
                        Do not automatically delete reports
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Task ToolBarIcons tests should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  margin-left: -10px;
}

.c2>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2>* {
  margin-left: 10px;
}

.c4 {
  margin-left: -5px;
}

.c4>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4>* {
  margin-left: 5px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c14 {
  cursor: pointer;
}

.c15 svg path {
  fill: #bfbfbf;
}

.c6 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c6 * {
  height: inherit;
  width: inherit;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  position: relative;
  display: none;
}

.c8:hover .c10 {
  display: block;
}

.c11 {
  position: absolute;
  margin: 0;
  padding: 0;
  left: 0;
  top: 0;
  z-index: 100;
  list-style: none;
  font-size: 10px;
  width: 255px;
}

.c12 {
  height: 22px;
  width: 255px;
  border-left: 1px solid #7F7F7F;
  border-right: 1px solid #7F7F7F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #fff;
  font-weight: bold;
  text-indent: 12px;
  text-align: left;
}

.c12:first-child {
  border-top: 1px solid #7F7F7F;
}

.c12:last-child {
  border-bottom: 1px solid #7F7F7F;
}

.c12:hover {
  background: #11ab51;
  color: #fff;
}

.c12 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  cursor: pointer;
}

.c16 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  font-size: 10px;
  background-color: red;
  font-weight: bold;
  border-radius: 10px;
  min-width: 10px;
  padding: 3px 5px;
  z-index: 1;
  background-color: #11ab51;
  color: #fff;
  bottom: -8px;
  right: 0px;
}

@media print {
  .c5 {
    display: none;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c0 c2"
    margin="10px"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c3 c4"
        margin="5px"
      >
        <a
          href="test/en/scanning.html#managing-tasks"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c5 c6"
            data-testid="svg-icon"
            title="Help: Tasks"
          >
            <svg
              title="Help: Tasks"
            >
              help.svg
            </svg>
          </span>
        </a>
        <a
          class="c7"
          href="/tasks"
        >
          <span
            class="c5 c6"
            data-testid="svg-icon"
            title="Task List"
          >
            <svg
              title="Task List"
            >
              list.svg
            </svg>
          </span>
        </a>
        <span
          class="c5 c6"
          data-testid="svg-icon"
          title="This is an Alterable Task. Reports may not relate to current Scan Config or Target!"
        >
          <svg
            title="This is an Alterable Task. Reports may not relate to current Scan Config or Target!"
          >
            alterable.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c4"
        margin="5px"
      >
        <span
          class="c8 c9"
        >
          <span
            class="c5 c6"
            data-testid="svg-icon"
          >
            <svg>
              new.svg
            </svg>
          </span>
          <div
            class="c10"
          >
            <ul
              class="c11"
            >
              <li
                class="c12"
              >
                <div
                  class="c13"
                >
                  New Task
                </div>
              </li>
              <li
                class="c12"
              >
                <div
                  class="c13"
                >
                  New Container Task
                </div>
              </li>
            </ul>
          </div>
        </span>
        <span
          class="c5 c14 c6"
          data-testid="svg-icon"
          title="Clone Task"
        >
          <svg
            title="Clone Task"
          >
            clone.svg
          </svg>
        </span>
        <span
          class="c5 c14 c6"
          data-testid="svg-icon"
          title="Edit Task"
        >
          <svg
            title="Edit Task"
          >
            edit.svg
          </svg>
        </span>
        <span
          class="c5 c14 c6"
          data-testid="svg-icon"
          title="Move Task to trashcan"
        >
          <svg
            title="Move Task to trashcan"
          >
            trashcan.svg
          </svg>
        </span>
        <span
          class="c5 c14 c6"
          data-testid="svg-icon"
          title="Export Task as XML"
        >
          <svg
            title="Export Task as XML"
          >
            export.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c4"
        margin="5px"
      >
        <span
          class="c5 c14 c6"
          data-testid="svg-icon"
          title="Start"
        >
          <svg
            title="Start"
          >
            start.svg
          </svg>
        </span>
        <span
          alt="Resume"
          class="c5 c15 c6"
          data-testid="svg-icon"
          title="Task is not stopped"
        >
          <svg
            title="Task is not stopped"
          >
            resume.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c2"
        margin="10px"
      >
        <div
          class="c0 c1"
        >
          <div
            class="c0 c4"
            margin="5px"
          >
            <a
              class="c7"
              data-testid="details-link"
              href="/report/1234"
              title="Last Report for Task foo from 07/30/2019"
            >
              <span
                class="c5 c6"
                data-testid="svg-icon"
              >
                <svg>
                  report.svg
                </svg>
              </span>
            </a>
            <a
              class="c7"
              href="/reports?filter=task_id%3D12345"
              title="Total Reports for Task foo"
            >
              <div
                class="c16"
                margin="0"
              >
                <span
                  class="c5 c6"
                  data-testid="svg-icon"
                >
                  <svg>
                    report.svg
                  </svg>
                </span>
                <span
                  class="c17"
                  data-testid="badge-icon"
                  margin="0"
                >
                  1
                </span>
              </div>
            </a>
          </div>
        </div>
        <a
          class="c7"
          href="/results?filter=task_id%3D12345"
          title="Results for Task foo"
        >
          <div
            class="c16"
            margin="0"
          >
            <span
              class="c5 c6"
              data-testid="svg-icon"
            >
              <svg>
                result.svg
              </svg>
            </span>
            <span
              class="c17"
              data-testid="badge-icon"
              margin="0"
            >
              1
            </span>
          </div>
        </a>
        <div
          class="c0 c1"
        >
          <div
            class="c0 c4"
            margin="5px"
          >
            <a
              class="c7"
              href="/notes?filter=task_id%3D12345"
              title="Notes for Task foo"
            >
              <div
                class="c16"
                margin="0"
              >
                <span
                  class="c5 c6"
                  data-testid="svg-icon"
                >
                  <svg>
                    note.svg
                  </svg>
                </span>
                <span
                  class="c17"
                  data-testid="badge-icon"
                  margin="0"
                >
                  2
                </span>
              </div>
            </a>
            <a
              class="c7"
              href="/overrides?filter=task_id%3D12345"
              title="Overrides for Task foo"
            >
              <div
                class="c16"
                margin="0"
              >
                <span
                  class="c5 c6"
                  data-testid="svg-icon"
                >
                  <svg>
                    override.svg
                  </svg>
                </span>
                <span
                  class="c17"
                  data-testid="badge-icon"
                  margin="0"
                >
                  3
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
